--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Excel Application</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<!-- SPA -->
-	<div id="app" class="container"></div>
+	<div id="app" class="container">
+
+		<div class="excel">
+
+			<div class="excel__header">
+				<i class="large material-icons">exit_to_app</i>
+			</div>
+
+			<div class="excel__toolbar"></div>
+			<div class="excel__formula"></div>
+			<div class="excel__table"></div>
+
+		</div>
+
+	</div>
 </body>
 </html>
